--- a/EasyRentCar/Views/Home/Index.cshtml
+++ b/EasyRentCar/Views/Home/Index.cshtml
@@ -25,7 +25,7 @@
                                         <div class="rounded position-relative fruite-item" style="background-color: #fff">
 
                                             <div class="fruite-img">
-                                                <img src="~/Content/img-not-available.jpg" class="img-fluid w-100 rounded-top" alt="">
+                                                <img src="@Url.Action("DisplayImage", "Car", new { id = car.CAR_ID })" class="img-fluid w-100 rounded-top" alt="">
                                             </div>
                                             <div class="text-white bg-secondary px-1 rounded position-absolute" style="top: 10px; left: 10px;">@(car.CAR_TRANSMISSION == true ? "Automatic" : "Manuel")</div>
                                             <div class="text-white bg-primary px-1 rounded position-absolute" style="top: 10px; right: 10px;">@car.CAR_FUEL</div>
