--- a/EasyRentCar/Views/Shared/_Navbar.cshtml
+++ b/EasyRentCar/Views/Shared/_Navbar.cshtml
@@ -7,9 +7,33 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav mx-auto">
-                    <a href="/Home" class="nav-item nav-link customize-nav @((ViewContext.HttpContext.Request.Path == ("/")) || (ViewContext.HttpContext.Request.Path == ("/Home")) || (ViewContext.HttpContext.Request.Path == ("")) ? "active" : "")">Home</a>
-                    <a href="/Car/Index" class="nav-item nav-link customize-nav @((ViewContext.HttpContext.Request.Path.Contains("Car")) ? "active" : "") ">Cars</a>
+                    <a href="/Home" class="nav-item nav-link customize-nav @((ViewContext.HttpContext.Request.Path == ("/")) || (ViewContext.HttpContext.Request.Path == ("/Home")) || (ViewContext.HttpContext.Request.Path == ("")) || (ViewContext.HttpContext.Request.Path.Contains("/Home/Index")) ? "active" : "")">Home</a>
+                    <a href="/Car/Index" class="nav-item nav-link customize-nav @((ViewContext.HttpContext.Request.Path.Contains("Car")) ? "active" : "" ) ">Cars</a>
                     <a href="/Home/Contact" class="nav-item nav-link customize-nav @(ViewContext.HttpContext.Request.Path == "/Home/Contact" ? "active" : "")">Contact</a>
+                </div>
+                <div class="row">
+                    @if (!User.Identity.IsAuthenticated)
+                    {
+                    <a href="/Security/Login" class="my-auto btn btn-primary" style="color: #FFFFFF;">
+                        Login
+                    </a>
+                    }
+                    else
+                    {
+                    <div class="col-lg-5 col-md-5 my-auto" style="color:#FFFFFF">Welcome @User.Identity.Name</div>
+
+                    <div class="col-lg-5 col-md-5 my-auto">
+                        <a href="@Url.Action(" Create", "Car" )" class="btn btn-success col">Create New Car</a>
+                    </div>
+
+                    <div class="col-lg-2 col-md-2 my-auto">
+                        <a href="/Security/Logout" class="my-auto btn btn-danger col" style="color: #FFFFFF;">
+                            Logout
+                        </a>
+                    </div>
+
+
+                    }
                 </div>
             </div>
         </nav>
