--- a/EasyRentCar/Views/Home/Index.cshtml
+++ b/EasyRentCar/Views/Home/Index.cshtml
@@ -21,11 +21,11 @@
                             @foreach (var car in Model)
                             {
                                 <div class="col-md-6 col-lg-4 col-xl-3">
-                                    <a href="@Url.Action("Details", "Car", new {id = car.CAR_ID})" style="display:flex; justify-content: space-between">
+                                    <a href="@Url.Action("Details", "Car", new {id = car.CAR_ID, numDays = 1})" style="display:flex; justify-content: space-between">
                                         <div class="rounded position-relative fruite-item" style="background-color: #fff">
 
                                             <div class="fruite-img">
-                                                <img src="@Url.Action("DisplayImage", "Car", new { id = car.CAR_ID })" class="img-fluid w-100 rounded-top" alt="">
+                                                <img src="@Url.Action("DisplayImage", "Car", new { id = car.CAR_ID, numDays = 1 })" class="img-fluid w-100 rounded-top" alt="">
                                             </div>
                                             <div class="text-white bg-secondary px-1 rounded position-absolute" style="top: 10px; left: 10px;">@(car.CAR_TRANSMISSION == true ? "Automatic" : "Manuel")</div>
                                             <div class="text-white bg-primary px-1 rounded position-absolute" style="top: 10px; right: 10px;">@car.CAR_FUEL</div>
